<resources>
    <string name="app_name">YouDrive</string>
    <string name="title_activity_maps">YouDrive</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="about">О проекте</string>
    <string name="registration">Регистрация</string>
    <string name="login">Войти</string>
    <string name="receive_an_invitation">Запрос приглашения</string>
    <string name="thanks">Спасибо</string>
    <string name="location_service">Сервис работает для людей, живущих или работающих внутри</string>
    <string name="manager">Ваш персональный менеджер свяжется с Вами в ближайшее время для подписания договора</string>
    <string name="it_fits">Мне это подходит</string>
    <string name="it_does_not_fit">Мне это не подходит</string>
    <string name="reserve">Забронировать</string>
    <string name="distance">Расстояние до авто:</string>
    <string name="time_to">Время пешком:</string>
    <string name="type">Тип КПП:</string>
    <string name="full">Заполненность бака:</string>
    <string name="tax_drive">Тариф движения:</string>
    <string name="tax_park">Тариф парковки:</string>
    <string name="question_password">Забыли пароль?</string>
    <string name="entrance">Вход</string>
    <string name="invitation">Далее</string>
    <string name="alarm">Внимание</string>
    <string name="ok">Хорошо</string>
    <string name="minutes"> мин.</string>
    <string name="km">км.</string>
    <string name="success">Готово!</string>
    <string name="info">Автомобиль успешно забронирован. \nАренда начнется через 20 минут.</string>
    <string name="car_number">Номер:</string>
    <string name="car_color">Цвет: %1$s</string>
    <string name="car_model">Автомобиль: %1$s</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="cancel_reserve">Отменить бронь</string>
    <string name="open_car">Открыть машину</string>
    <string name="current_tariff">Текущий тариф:</string>
    <string name="usage">Использование:</string>
    <string name="parking">Парковка:</string>
    <string name="total">Итого:</string>
    <string name="close_car">Закрыть машину</string>
    <string name="close_rent">Закончить аренду</string>
    <string name="check">Счет</string>
    <string name="buy">Благодарим за использование сервиса. Оплата будет списана с вашей карты в ближайшее время.</string>
    <string name="close">Закрыть</string>
    <string name="error">Ошибка</string>
    <string name="empty">Пустое поле</string>
    <string name="password_dont_match">Пароли не совпадают</string>
    <string name="phone_error">Введите номер формата (xxx) xxx-xx-xx без +7 </string>
    <string name="enter_price">Вы должны ввести сумму</string>
    <string name="summ_bigger_than_3000">Сумма должна быть не менее 3000 рублей</string>
    <string name="get_free_drives">Получить бесплатные поездки</string>
    <string name="referal_description">Подарите скидку на первую поездку друзьям и также получите до 500 рублей на ваш счет.</string>
    <string name="more">Подробнее</string>
    <string name="copy">Копировать</string>
    <string name="give_promo_title">Поделитесь своим промо-кодом</string>
    <string name="no_social_detected">Для того чтобы воспользоваться функцией \"Поделиться в соцсетях\" установите одно из приложений FB, Twitter или ВКонтакте</string>
    <string name="share_social">Поделиться в соцсетях</string>
    <string name="invite">Пригласить</string>
    <string name="invite_email">Пригласить по эл. почте</string>
    <string name="invite_sms">Пригласить по SMS</string>
    <string name="search">Поиск</string>
    <string name="send">Отправить</string>
    <string name="invitation_send_success">Приглашения успешно отправлены</string>
    <string name="invitation_send_fail">Ошибка при отправке приглашения, попробуйте позже</string>
    <string name="referral_data_fail">Ошибка при получении данных о бесплатных поездках, попробуйте позже</string>
    <string name="referral_sms_text">Воспользуйтесь моим пригласительным кодом %1$s и получите скидку %2$d%% на первую поездку (не более %3$d руб.). %4$s</string>
    <string name="referral_dialog_description">Каждый раз, когда ваши друзья регистрируются по вашему пригласительному коду, они получают скидку %1$d%% на первую поездку(но не более %2$d руб). Вы также получите %3$d%% от стоимости первой поездки вашего друга(но не более %4$d руб) на свой счет.</string>
    <string name="email_not_valid">Email введен не корректно</string>
    <string name="internal_error">Внутренняя ошибка</string>
    <string name="inform">Мы сообщим Вам, когда начнем работать в Вашем регионе.</string>
    <string name="book">Забронировать</string>
    <string name="region_not_selected">Регион не выбран</string>
    <string name="call">Позвонить оператору</string>
    <string name="free_drive">Бесплатные поездки</string>
    <string name="exit">Выход</string>
    <string name="tariff">Тарифы</string>
    <string name="help">Помощь</string>
    <string name="preference_file_key">user.xml</string>
    <string name="price_per_min">Цена минуты:</string>
    <string name="command_error">Ошибка выполнения команды</string>
    <string name="phone_not_valid">Телефон введен не корректно</string>
    <string name="phone_format">Формат телефона не 7 (###) ### ## ##</string>
    <string name="time_start_rent">До начала аренды %1$s мин.</string>
    <string name="distance_to_car">До ближайшей машины %1$s мин. пешком</string>
    <string name="distance_to_book_car">До забронированной машины %1$s мин. пешком</string>
    <string name="profile">Личный кабинет</string>
    <string name="no_internet">Отсутствует подключение к интернету</string>
    <string name="open_app">Открыть приложение и найти автомобиль поблизости</string>
    <string name="load_documents">Загрузите, пожалуйста, фотографию или скан копию паспорта
                                   (разворот с фотографией и разворот с пропиской) и водительского
                                    удостоверения (обе стороны).Документы будут проверятся службой безопасности.
    </string>
    <string name="payments">В соответсвии с офертой, при регистрации мы вносим на Ваш личный счет
                            авнсовый платеж в размере %1$s рублей на оплату первых поездок. Оплата
                            последующих поездок (сверх %1$s рублей) будет списываться с вашей банковской
                            карты сразу после завершения аренды. Вы можете управлять списком привязаных
                            банковских карт через личный кабинет на сайте. Мы не храним данных ваших банковских
                            карт. Обработку платежной информации осуществаляет наш партнер -
    </string>
    <string name="payments_text">В соответствии с офертой, при регистрации мы вносим на ваш личный счет
        авансовый платеж в размере 999 рублей на оплату первых поездок. Оплата последующих поездок
        (сверх 999 рублей) будет списываться с вашей банковской карты сразу после завершения аренды.
        Вы можете управлять списком привязанных банковских карт через личный кабинет на сайте.
        Мы не храним данных ваших банковских карт. Обработку платежной информации осуществляет
        наш партнер - CloudPayments</string>
    <string name="forvard">Вперед</string>
    <string name="back">Назад</string>
</resources>