<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:padding="15dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txtTimeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_to"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txtFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txtTaxDrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_drive"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txtTaxPark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_park"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"/>

</LinearLayout>