<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp">

    <TextView
        android:id="@+id/txtThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:textAllCaps="true"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_service"
        android:layout_below="@id/txtThanks"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>