<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/imgCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center_horizontal"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txtModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_model"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center_horizontal"
        android:paddingTop="40dp"/>

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_number"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/txtColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_color"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center_horizontal"
        android:paddingBottom="40dp"/>

    <Button
        android:id="@+id/btnShowOnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_on_map"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:background="@color/main"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>